--- a/styles/Counter.module.css
+++ b/styles/Counter.module.css
@@ -42,8 +42,16 @@
     }
   }
   .counter__description{
-      font-size: 2rem;
-      text-align: center;
-      justify-content: center;
-      color: #fff;
+      font-size: 1rem;
+      color: #FFCB48;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      font-weight: 600;
+      float: right;
+      font-size: 0.9rem;
+      margin-top:-40px;
+      margin-right:10px;
+      text-overflow: ellipsis;
+      width:auto !important;
+      max-width:250px
   }
