--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -1,33 +1,41 @@
 .nav {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding: 10px;
-    height: 50px;
-    z-index: 1;
-    /***Animation**/
-    transition-timing-function: ease-in;
-    transition: all 0.8s;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 10px;
+  height: 50px;
+  margin-top:30px;
+  z-index: 1;
+  /***Animation**/
+  transition-timing-function: ease-in;
+  transition: all 0.8s;
+}
+
+.nav__original{
+  margin-top:0px!important
 }
 
 .nav__contents {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav__black {
-    background-color: #111;
+  background-color: #111;
 }
 
 .nav__logo {
-    position: fixed;
-    left: 0;
-    top: 10px;
-    padding-left: 20px;
-    padding-top: 4px;
-    width: 90px;
-    object-fit: contain;
-    cursor: pointer;
+  position: fixed;
+  left: 0;
+  top: 40px;
+  padding-left: 20px;
+  padding-top: 4px;
+  width: 90px;
+  object-fit: contain;
+  cursor: pointer;
+}
+.nav__logo__original{
+  top: 10px!important;
 }
 
 .nav__avatar {
@@ -36,40 +44,42 @@
     width: 30px;
     object-fit: contain;
     cursor: pointer;
-}
+  }
+
+
 .nav__continue__with__google {
-    position: fixed;
-    right: 20px;
-   width:130px;
-    object-fit: contain;
-    cursor: pointer;
+  position: fixed;
+  right: 20px;
+  width: 130px;
+  object-fit: contain;
+  cursor: pointer;
 }
- 
+
 .nav__button {
-    outline: none;
-    position: fixed;
-    right: 80px;
-    padding: 8px 20px;
-    font-size: 1rem;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    background: #e50914;
-    font-weight: 500;
+  outline: none;
+  position: fixed;
+  right: 80px;
+  padding: 8px 20px;
+  font-size: 1rem;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  background: #e50914;
+  font-weight: 500;
 }
 .nav__button__sm {
-    outline: none;
-    position: fixed;
-    right: 160px;
-    padding: 6px 10px;
-    font-size: 0.8rem;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    background: #5271FF;
-    font-weight: 500;
+  outline: none;
+  position: fixed;
+  right: 160px;
+  padding: 6px 10px;
+  font-size: 0.8rem;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  background: #5271ff;
+  font-weight: 500;
 }
 
 .hidden {
-    display: none!important;
+  display: none !important;
 }
