--- a/styles/Player.module.css
+++ b/styles/Player.module.css
@@ -1,61 +1,104 @@
-.player__wrapper {
-  padding-bottom: 20px;
-  margin-top: 40px;
-}
- 
 .player__main {
   display: flex;
-  flex-direction: column;
   color: #fff;
-  justify-content: center !important;
-  align-items: center !important;
+}
+.tutorial__wrapper {
+  display: flex;
+  flex-direction: column;
   /* background-image: linear-gradient(to right, #5271FF, red); */
-  background: url("/static/images/how_it_works_bg.jpg");
   background-size: cover;
   /* background-repeat: no-repeat; */
   background-attachment: fixed;
 }
+.tutorial__header__text{
+  margin-top:20px;
+  text-align:left;
+  margin-left:20px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #F0B01E
+}
+@media only screen and (max-width: 640px) {
+  .tutorial__header__text {
+    margin-left:10px;
+    font-size: 1.3rem;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .tutorial__header__text {
+    margin-left:5px;
+    font-size: 1rem;
+  }
+}
+@media only screen and (max-width: 320px) {
+  .tutorial__header__text {
+    margin-left:2px;
+    font-size: 0.7rem;
+  }
+}
 .react__player {
+  
+  margin-left: 20px;
+  padding-right:20px;
   width: 600px !important;
   height: 400px !important;
 }
 .player__description {
-  margin: 20px auto;
-  font-size: 1.5rem;
-  justify-content: center !important;
-  align-items: center !important;
+  font-size: 1rem;
+  line-height: 2;
   font-weight: 500;
+  margin-left:10px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 @media only screen and (max-width: 640px) {
     .player__description {
-        font-size: 0.8rem!important;
+        font-size: 0.7rem!important;
+        margin-left:4px;
+    }
+  }
+  @media only screen and (max-width: 480px) {
+    .player__description {
+        font-size: 0.6rem!important;
+        margin-left:2px;
+    }
+  }
+  @media only screen and (max-width: 320px) {
+    .player__description {
+        font-size: 0.5rem!important;
+        margin-left:0px;
     }
   }
 @media only screen and (max-width: 640px) {
     .react__player {
-      width: 400px !important;
-      height: 400px !important;
+  margin-left:10px;
+  padding-bottom:0px;
+  padding-right:10px;
+      width: 500px !important;
+      height: 300px !important;
     }
   }
 
-@media only screen and (max-width: 640px) {
-  .react__player {
-    width: 400px !important;
-    height: 400px !important;
-  }
-}
+ 
+ 
 @media only screen and (max-width: 480px) {
   .react__player {
+    margin-left:7px;
+    padding-bottom:0px;
+    padding-right:7px;
     width: 300px !important;
-    height: 300px !important;
+    height: 250px !important;
   }
 }
 @media only screen and (max-width: 320px) {
   .react__player {
+    
+    margin-left:4px;
+    padding-bottom:0px;
+    padding-right:4px;
     width: 200px !important;
-    height: 200px !important;
+    height: 150px !important;
   }
 }
 
