--- a/styles/Counter.module.css
+++ b/styles/Counter.module.css
@@ -1,7 +1,7 @@
 .main{
     display:flex;
     color:#5271FF;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size:4rem;
     justify-content:space-between;
     width:100%;
