--- a/styles/Player.module.css
+++ b/styles/Player.module.css
@@ -9,9 +9,10 @@
   background-size: cover;
   /* background-repeat: no-repeat; */
   background-attachment: fixed;
+  padding-bottom: 20px;;
 }
 .tutorial__header__text{
-  margin-top:20px;
+  
   text-align:left;
   margin-left:20px;
   font-size: 1.5rem;
@@ -48,26 +49,26 @@
   font-size: 1rem;
   line-height: 2;
   font-weight: 500;
-  margin-left:10px;
+  /* margin-left:10px; */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
   Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 @media only screen and (max-width: 640px) {
     .player__description {
         font-size: 0.7rem!important;
-        margin-left:4px;
+        /* margin-left:4px; */
     }
   }
   @media only screen and (max-width: 480px) {
     .player__description {
         font-size: 0.6rem!important;
-        margin-left:2px;
+        /* margin-left:2px; */
     }
   }
   @media only screen and (max-width: 320px) {
     .player__description {
         font-size: 0.5rem!important;
-        margin-left:0px;
+        /* margin-left:0px; */
     }
   }
 @media only screen and (max-width: 640px) {
