--- a/styles/global.css
+++ b/styles/global.css
@@ -55,3 +55,13 @@ button.success {
 button.danger {
   background-color: #111 !important;
 }
+
+.fadeBottom {
+  height:50px;
+   
+  background-image: linear-gradient( 180deg, transparent, rgba(37, 37, 37, 0.61), #262626);
+  /* background-image: linear-gradient(to right, #262626, #3b3b8a); */
+}
+.red__border__input{
+  border:2px solid red!important;
+}
