--- a/styles/Counter.module.css
+++ b/styles/Counter.module.css
@@ -1,57 +1,67 @@
-.main{
-    display:flex;
-    color:#5271FF;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size:4rem;
-    justify-content:space-between;
-    width:100%;
-    align-items:center;
-    padding-bottom: 20px; 
-    font-weight: 600;
-    /* background-image: linear-gradient(to right, #6A03D6, black);
+.main {
+  display: flex;
+  color: #5271ff;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 4rem;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  padding-bottom: 20px;
+  font-weight: 600;
+  /* background-image: linear-gradient(to right, #6A03D6, black);
      */
-    
 }
-.root{
-    background-image: linear-gradient(to right, #6A03D6, black);
-     
+.root {
+  background-image: linear-gradient(to right, #fff, #fff);
+  color: #111 !important;
 }
 
 @media only screen and (max-width: 640px) {
-    .main {
-      width: 100% !important;
-      font-size:2rem; 
-      
-     
-    }
+  .main {
+    width: 100% !important;
+    font-size: 2rem;
   }
-  @media only screen and (max-width: 768px) {
-    .main {
-      width: 100% !important;
-      font-size:2rem; 
-      
-    
-    }
+}
+@media only screen and (max-width: 768px) {
+  .main {
+    width: 100% !important;
+    font-size: 2rem;
   }
-  @media only screen and (max-width: 480px) {
-    .main {
-      width: 100% !important;
-      font-size:2rem; 
-     
-     
-    }
+}
+@media only screen and (max-width: 480px) {
+  .main {
+    width: 100% !important;
+    font-size: 2rem;
   }
-  .counter__description{
-      font-size: 1rem;
-      color: #FFCB48;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      font-weight: 600;
-      float: right;
-      font-size: 0.9rem;
-      margin-top:-40px;
-      margin-right:10px;
-      text-overflow: ellipsis;
-      width:auto !important;
-      max-width:250px
+}
+.counter__description {
+  font-size: 1rem;
+  color: #ffcb48;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 600;
+  float: right;
+  font-size: 0.9rem;
+  margin-top: -40px;
+  margin-right: 10px;
+  text-overflow: ellipsis;
+  width: auto !important;
+  max-width: 250px;
+}
+
+.stats__title {
+  font-size: 2rem;
+  font-weight: 800;
+  padding-bottom: 0.8rem;
+}
+@media (max-width: 640px) {
+  .stats__title {
+    font-size: 1.6rem;
   }
+}
+@media (max-width: 480px) {
+  .stats__title {
+    font-size: 1.2rem;
+  }
+}
