--- a/styles/Player.module.css
+++ b/styles/Player.module.css
@@ -1,6 +1,6 @@
 .player__main {
   display: flex;
-  color: #fff;
+  color: #111;
 }
 .tutorial__wrapper {
   display: flex;
@@ -14,36 +14,35 @@
 .tutorial__header__text{
   
   text-align:left;
-  margin-left:20px;
+  
   font-size: 1.5rem;
   font-weight: bold;
   color: #F0B01E
 }
 @media only screen and (max-width: 640px) {
   .tutorial__header__text {
-    margin-left:10px;
+    
     font-size: 1.3rem;
   }
 }
 
 @media only screen and (max-width: 480px) {
   .tutorial__header__text {
-    margin-left:5px;
+    
     font-size: 1rem;
   }
 }
 @media only screen and (max-width: 320px) {
   .tutorial__header__text {
-    margin-left:2px;
+   
     font-size: 0.7rem;
   }
 }
 .react__player {
   
-  margin-left: 20px;
-  padding-right:20px;
-  width: 600px !important;
-  height: 400px !important;
+   
+  width: 400px !important;
+  height: 200px !important;
 }
 .player__description {
   font-size: 1rem;
@@ -73,11 +72,9 @@
   }
 @media only screen and (max-width: 640px) {
     .react__player {
-  margin-left:10px;
-  padding-bottom:0px;
-  padding-right:10px;
-      width: 500px !important;
-      height: 300px !important;
+  
+      width: 300px !important;
+      height: 200px !important;
     }
   }
 
@@ -85,19 +82,15 @@
  
 @media only screen and (max-width: 480px) {
   .react__player {
-    margin-left:7px;
-    padding-bottom:0px;
-    padding-right:7px;
-    width: 300px !important;
-    height: 250px !important;
+     
+    width: 200px !important;
+    height: 200px !important;
   }
 }
 @media only screen and (max-width: 320px) {
   .react__player {
     
-    margin-left:4px;
-    padding-bottom:0px;
-    padding-right:4px;
+    
     width: 200px !important;
     height: 150px !important;
   }
