--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,24 +1,32 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+html,
 body {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI";
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  /* background-image: linear-gradient(to right, #262626, #3b3b8a); */
-  background-image: linear-gradient(to right, #fff, #e2e2e2);
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-  /* Firefox */
-}
-.applayout__component {
-  background-color: black;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+.section {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  position: relative;
+}
+.custom-section{
+  padding-top: 0;
+  padding-bottom: 0
+}
 /* Hide scrollbar for Chrome, Safari and Opera */
 
 ::-webkit-scrollbar {
@@ -65,3 +73,4 @@ button.danger {
 .red__border__input{
   border:2px solid red!important;
 }
+
