--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,9 +23,9 @@ a {
   padding-bottom: 100px;
   position: relative;
 }
-.custom-section{
+.custom-section {
   padding-top: 0;
-  padding-bottom: 0
+  padding-bottom: 0;
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
 
@@ -65,12 +65,15 @@ button.danger {
 }
 
 .fadeBottom {
-  height:50px;
-   
-  background-image: linear-gradient( 180deg, transparent, rgba(37, 37, 37, 0.61), #262626);
-  /* background-image: linear-gradient(to right, #262626, #3b3b8a); */
-}
-.red__border__input{
-  border:2px solid red!important;
-}
+  height: 50px;
 
+  background-image: linear-gradient(
+    180deg,
+    transparent,
+    rgba(37, 37, 37, 0.61),
+    #262626
+  );
+}
+.red__border__input {
+  border: 2px solid red !important;
+}
