--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,7 @@ a {
   padding-bottom: 100px;
   position: relative;
 }
-.custom-section {
+.uvsity-section {
   padding-top: 0;
   padding-bottom: 0;
 }
