--- a/styles/SignIn.module.css
+++ b/styles/SignIn.module.css
@@ -49,33 +49,35 @@
   text-align: left;
   margin-bottom: 25px;
 }
-.signin__Dialog__signin__explicit__header{
-    font-size: 2rem;
+.signin__Dialog__signin__explicit__header {
+  font-size: 2rem;
   font-weight: 400;
   text-align: left;
   margin-bottom: 25px;
-  width:auto;;
-  white-space: nowrap!important; 
-  
+  margin-top: 10px;
+  width: auto;
+  white-space: nowrap !important;
 }
-
-.signin__Dialog > form > input {
+.signin__Dialog > form > div > div > input,
+.signin__registration__input {
   outline: none;
   outline-width: 0;
   height: 40px;
   margin-bottom: 14px;
   border: none;
   border-radius: 5px;
+  -webkit-box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.5);
   padding: 5px 15px;
   color: #111 !important;
+  zoom: 0.8 !important;
 }
 
 .signin__Dialog > form > button {
-  padding: 16px 20px;
+  padding: 2px 4px;
   font-size: 1rem;
   color: #fff;
   border-radius: 5px;
-  background: #5271ff;
   border: none !important;
   outline: none !important;
   cursor: pointer;
@@ -107,12 +109,12 @@
   text-align: left;
   margin-top: 10px;
 }
-.signin__Dialog__footer__signup__option>h4 {
-    font-size: 1rem;
-    font-weight: 500;
-    text-align: left;
-    margin-top: 5px;
-  }
+.signin__Dialog__footer__signup__option > h4 {
+  font-size: 1rem;
+  font-weight: 500;
+  text-align: left;
+  margin-top: 5px;
+}
 
 .signin__Dialog__gray {
   color: grey;
@@ -130,15 +132,14 @@
 }
 .signin__Dialog__cancelButtonRoot {
   cursor: pointer;
-   
 }
 .signin__Dialog__brand__logo {
   object-fit: contain;
   width: 50%;
-  margin-left:-4px;
+  margin-left: -4px;
 }
-.signin__Dialog__brand__logo__wrapper{
-    padding:5px;
+.signin__Dialog__brand__logo__wrapper {
+  padding: 5px;
 }
 .signin__Dialog__acceptance__disclosure {
   font-size: 0.7rem !important;
@@ -146,35 +147,54 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-style: normal !important;
   text-align: justify;
-  margin-top:8px !important;
+  margin-top: 8px !important;
+  zoom: 0.8 !important;
 }
 
-.signin__Dialog__signin__with__google__option>img{
-    object-fit: contain;
-    width:auto;
-    cursor: pointer;
-    margin-top: 4px;;
+.signin__Dialog__signin__with__google__option > div>button> img {
+  object-fit: contain!important;
+  width: auto!important;
+  cursor: pointer!important;
+  margin-top: 4px!important;
 }
-.signin__Dialog__alternative__or{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: 400;
-    font-style: italic;
-    color:lightgrey;
-    vertical-align: middle;
-    padding: 8px;
-    margin-top: 20px;
+.signin__Dialog__alternative__or {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 400;
+  font-style: italic;
+  color: lightgrey;
+  vertical-align: middle;
+  padding: 8px;
+  margin-top: 14px !important;
 }
-.signin__Dialog__footer__forgotpassword__option{
-    font-size: 0.7rem;
-    font-weight: 500;
-    text-align: left;
-    word-spacing: 0cm;
-     
+.signin__Dialog__footer__forgotpassword__option {
+  font-size: 0.7rem;
+  font-weight: 500;
+  text-align: left;
+  word-spacing: 0cm;
 }
-.signin__Dialog__footer__forgotpassword__option:hover{
-    cursor: pointer;
+.signin__Dialog__footer__forgotpassword__option:hover {
+  cursor: pointer;
   text-decoration: underline;
   transition-timing-function: ease-in;
   transition: all 0.8s;
-  color:#5271FF
+  color: #5271ff;
+}
+.signinDialog__error__message {
+  text-overflow: ellipsis !important;
+  width: auto !important;
+  overflow: hidden;
+}
+.signinDialog__input__error {
+  border-bottom: 2px solid red !important;
+}
+.signinDialog__input__validated {
+  border-bottom: 2px solid green !important;
+}
+.signinDialog__password__help__icon {
+  color: #fff !important;
+  font-size: 0.9rem !important;
+}
+.signin__Dialog__submit__btn {
+  background-color: #5271ff;
+  width: 100%;
 }
