--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -1,46 +1,56 @@
-.profile__mini__avatar{
-    margin-bottom: 10px;
+.profile__mini__avatar {
+  margin-bottom: 10px;
 }
 
 .profile__mini {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-   
-    
-  }
-  .profile__mini__secondary__information{
-      margin:8px;
-  }
-  .profile__completion__indicator{
-      display: flex;
-      width:120px;
-      height:120px;
-      padding:5px;
-      margin: 10px;
-  }
-  .profile__mini > img {
-    margin-bottom: -40px;
-    width: 100%;
-    height: 90px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    object-fit: cover;
-    align-items: center;
-    place-items: center;
-    place-content: center;
-  }
-  .profile__mini > div> div> h4 {
-    color: gray;
-    font-size: 12px !important;
-    font-weight: 400;
-  }
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.profile__mini__secondary__information {
+  margin: 8px;
+}
+.profile__completion__indicator {
+  display: flex;
+  width: 120px;
+  height: 120px;
+  padding: 5px;
+  margin: 10px;
+}
+.profile__mini > img {
+  margin-bottom: -40px;
+  width: 100%;
+  height: 90px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  object-fit: cover;
+  align-items: center;
+  place-items: center;
+  place-content: center;
+}
+.profile__mini > div > div > h4 {
+  color: gray;
+  font-size: 12px !important;
+  font-weight: 400;
+}
 
-  .profile__mini > div> div> h3 {
-    color: gray;
-    font-size: 11px !important;
-    font-weight: 400;
-  }
-  .profile__mini > div> h2 {
-    font-size: 18px !important;
-  }
+.profile__mini > div > div > h3 {
+  color: gray;
+  font-size: 11px !important;
+  font-weight: 400;
+}
+.profile__mini > div > h2 {
+  font-size: 18px !important;
+  text-align: center;
+  place-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.profile__mini > div > h2:hover {
+  cursor: pointer;
+  text-decoration: underline;
+  transition-timing-function: ease-in;
+  transition: all 0.8s;
+}
