--- a/styles/authorized.dashboard.module.css
+++ b/styles/authorized.dashboard.module.css
@@ -1,7 +1,8 @@
 .dashboard{
     display: flex;
     width: 100%;
-    padding:15px
+    padding:15px;
+    background-color:#F3F2EF
 }
 .dashboard__left__sidebar{
     flex: 0.2
