--- a/styles/ProfileCompletionDetail.module.css
+++ b/styles/ProfileCompletionDetail.module.css
@@ -1,51 +1,55 @@
-.profile__completion__detail {
-  display: flex;
-  padding: 8px;
-  width: auto;
-  
-  
+ 
+.profile__completion__detail{
+  text-align: left;
+  padding: 10px;
+  border: 1px solid lightgray;
+  background-color: #fff;
+  border-radius: 10px;
+  margin-top: 10px;
 }
 .profile__completion__detail h4 {
-  font-size: 1rem;
+  font-size: 0.9rem;
   color: #fff;
   font-weight: bold;
-  padding-bottom: 6px;
-  padding-left: 8px;
   padding-top: 8px;
-  margin-left: 10px;
-  justify-content: center;
 }
+
 .profile__completion__detail__graph {
  justify-content: center;
- margin:5%;
+ margin:3%;
  display: flex;
  padding-right:10px;
  zoom:0.5;
  place-content: center;
  place-items: center;
  text-align: center;
- /* // background-image: linear-gradient(to right, #111, #286090); */
 }
 .profile__completion__detail__guidance__text{
   font-size: 0.7rem!important;
-  margin-top:2%;
-  padding-bottom: 3px;;
-  padding-top:3px;
-  color:#111;font-weight: 400;
- 
+  padding: 6px;;
+  color:#111;
+  font-weight: 400;
+ text-align: left!important
+}
+.profile__completion__detail__explanation__text{
+  font-size: 0.8rem!important;
+  padding: 6px !important;
+  text-align: justify;
+  font-weight: 400!important;
 }
 
 .profile__completion__detail__header__text{
-  font-size: 0.9rem!important;
+  font-size: 0.8rem!important;
   font-weight: bold !important;
-  text-align:left
+  padding-bottom:5px;
+  border-bottom: 1px solid #e2e2e2;
+  
 }
 .profile__completion__detail__suggestion__icon{
   cursor: pointer!important;
+align-items: center!important;
 }
-.profile__completion__detail__card{
-  background-image: linear-gradient(to right, #fff, #fff);
-}
+ 
 .profile__completion__detail__suggestions{
   display: flex !important;
   flex-direction: column !important;
