--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -53,4 +53,13 @@
   text-decoration: underline;
   transition-timing-function: ease-in;
   transition: all 0.8s;
+  color: #0081cb!important;
+}
+
+.profile__mini > div > h2:hover {
+  cursor: pointer;
+  text-decoration: underline;
+  transition-timing-function: ease-in;
+  transition: all 0.8s;
+  color: #0081cb!important;
 }
