--- a/styles/Session.module.css
+++ b/styles/Session.module.css
@@ -1,135 +1,181 @@
-.session__card{
-    transition: transform 450ms;
-    cursor: pointer;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif!important;
-    box-shadow: 0 0 15px rgba(0,0,0,.1)!important;
-    position: relative!important;
-    border: none;
-    outline: none;
+.session__card {
+  transition: transform 450ms;
+  cursor: pointer;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif !important;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1) !important;
+  position: relative !important;
+  border: none;
+  outline: none;
 }
 
-.session__card__title{
-    font-size: 1.3rem!important;
-    /* color:#fff!important; */
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif!important;
-    
-     
+.session__card__title {
+  font-size: 1.3rem !important;
+  /* color:#fff!important; */
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif !important;
 }
-.session__card__darkgrey__variant{
-    background-image: linear-gradient(to right, #000,#e2e2e2);
-    color: #fff!important;
+.session__card__darkgrey__variant {
+  background-image: linear-gradient(to right, #000, #e2e2e2);
+  color: #fff !important;
 }
 
-.session__card__white__variant{
-    background-image: linear-gradient(to right, #fff,#fff);
-    color: #111!important;
+.session__card__white__variant {
+  background-image: linear-gradient(to right, #fff, #fff);
+  color: #111 !important;
 }
 
-.session__card__lightblue__variant{
-    background-image: linear-gradient(to right, #000,#558ee1);
-    color: #fff!important;
+.session__card__lightblue__variant {
+  background-image: linear-gradient(to right, #000, #558ee1);
+  color: #fff !important;
 }
 .session__card:hover {
-    transform: scale(1.08);
-    opacity: 1;
-    box-shadow: 0 0 15px rgba(0,0,0,1)!important;
+  transform: scale(1.08);
+  opacity: 1;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 1) !important;
 }
-.session__card__profile__subtitle{
-    background: #5271FF;
-    border: none;
-    outline: none;
-    width: 100rem;
-    margin-left:8px;
-    font-weight: 500;
-    padding: 8px;
-    font-size:0.7rem;
-    color: darkgrey;
+.session__card__profile__subtitle {
+  background: #5271ff;
+  border: none;
+  outline: none;
+  width: 100rem;
+  margin-left: 8px;
+  font-weight: 500;
+  padding: 8px;
+  font-size: 0.7rem;
+  color: darkgrey;
 }
-.session__card__event__time__subtitle{
-    background: #111;
-    border: none;
-    outline: none;
-    /* border-radius: 7px; */
-    width:45rem;
-    margin-left:60px;
-    margin-top:-8px;
-    font-weight: 500;
-    display: inline-block;
-    padding: 8px;
-    font-size:0.5rem;
-    color: darkgrey;
-    margin-bottom: 2px;
-}
-
-.session__card__event__icon{
-    font-size:0.8rem!important;
-    padding:1px;
-}
-.session__card__profile__icon{
-    font-size:1rem!important;
-    padding:2px;
+.session__card__event__time__subtitle {
+  background: #111;
+  border: none;
+  outline: none;
+  /* border-radius: 7px; */
+  width: 45rem;
+  margin-left: 60px;
+  margin-top: -8px;
+  font-weight: 500;
+  display: inline-block;
+  padding: 8px;
+  font-size: 0.5rem;
+  color: darkgrey;
+  margin-bottom: 2px;
 }
 
-.session__card__attendance__count{
-    width: 30px;
-    line-height: 30px;
-    border-radius: 50%;
-    text-align: center;
-    font-size: 12px;
-    border: none;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 600;
-    background-color:#5CB85C;
-    color: #fff
+.session__card__event__icon {
+  font-size: 0.8rem !important;
+  padding: 1px;
 }
-.session__card__attendance__text{
-    margin-left:2px;
-    font-size:11px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    vertical-align: middle;
-    margin-top:5px;
-    font-style: italic;
-    font-weight: 500;
-    
+.session__card__profile__icon {
+  font-size: 1rem !important;
+  padding: 2px;
 }
- .session__card__review__star__replacement{
-    width: 30px;
-    object-fit: contain;
- }
- .session__card__review__star{
-     color:gold;
-     font-size:30px!important;
- }
- .session__card__review__unstar{
-      margin-top:3px
- }
- .session__card__costing{
-     color:#fff;
-     font-weight: 500;
-     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif!important;
-     font-size: 14px;
-     padding:4px;
-     margin:4px;
-     text-align:center;
-     background-color:blue;
-     line-height: 20px;
-     width:70px;
- }
- .session__card__currency__amount{
-     /* background-color: #259B56!important; */
-     color: #fff !important;
-     font-size: 16px!important;
-     margin-left: 2px!important;
-     vertical-align: middle;
-    
+.preview__card__divider{
+  background: lightgray !important;
+  color:gray !important;
+}
 
- }
+.session__card__attendance__count {
+  width: 30px;
+  line-height: 30px;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 12px;
+  border: none;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  background-color: #5cb85c;
+  color: #fff;
+}
+.session__card__attendance__text {
+  margin-left: 2px;
+  font-size: 11px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  vertical-align: middle;
+  margin-top: 5px;
+   
+  font-weight: 500;
+}
+.preview__card__attendance__text{
+  
+  font-size: 11px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  vertical-align: middle;
+  
+  font-style: italic;
+  font-weight: 500;
+}
+.session__card__review__star__replacement {
+  width: 30px;
+  object-fit: contain;
+}
+.session__card__review__star {
+  color: gold;
+  font-size: 30px !important;
+}
+.session__card__review__unstar {
+  margin-top: 3px;
+}
+.session__card__costing {
+  color: #fff;
+  font-weight: 500;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif !important;
+  font-size: 14px;
+  padding: 4px;
+  margin: 4px;
+  text-align: center;
+  background-color: blue;
+  line-height: 20px;
+  width: 70px;
+}
+.session__card__currency__amount {
+  /* background-color: #259B56!important; */
+  color: #fff !important;
+  font-size: 16px !important;
+  margin-left: 2px !important;
+  vertical-align: middle;
+}
 
- .session__card__shimmering__behavior{
-    padding:28px
- }
- .session__card__text__non__muted{
-     color:#1469CA!important;
- }
+.session__card__shimmering__behavior {
+  padding: 28px;
+}
+.session__card__text__non__muted {
+  color: #1469ca !important;
+}
+.preview__avatar {
+  width: 48px !important;
+  height: 48px !important;
+}
+.preview__avatar:hover {
+  cursor: pointer;
+  transition-timing-function: ease-in;
+  transition: all 0.8s;
+}
+.preview__author__container {
+  line-height: 1.375;
+}
 
- 
+.preview__event__time__subtitle {
+  border: none;
+  outline: none;
+  /* border-radius: 7px; */
+  font-weight: 500;
+  font-size: 0.8rem;
+  color: darkgrey;
+  margin-top:2px
+   
+}
+.preview__card__event__icon {
+  font-size: 1rem !important;
+  
+}
+.preview__author__name:hover{
+  cursor: pointer;
+  text-decoration: underline;
+  transition-timing-function: ease-in;
+  transition: all 0.8s;
+  color: #0081cb !important;
+}
+.preview__session__title:hover{
+  cursor: pointer;
+  text-decoration: underline;
+  transition-timing-function: ease-in;
+  transition: all 0.8s;
+}
