--- a/styles/DashboardProfile.module.css
+++ b/styles/DashboardProfile.module.css
@@ -26,3 +26,20 @@
   transition: all 0.8s!important;
   color: #111!important;
 }
+.profile__connect__request__text:hover{
+  text-decoration: underline!important;
+  transition: width 0.3s linear;
+  color: #e2e2e2!important;
+  cursor: pointer!important;
+}
+.profile__connect__request__text{
+  border-radius:5px !important;
+  padding-left:5px !important;
+  padding-right:5px !important;
+  text-align: center !important;
+  height:min-content;
+  background: #111 !important;
+  color: #fff !important;
+  box-sizing: border-box !important;
+  cursor: pointer!important;
+}
