--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+ 
 .app {
   display: flex;
   flex-direction: column;
+ 
 }
 html,
 body {
@@ -11,6 +13,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    --blue: #0081cb;
 }
 
 a {
@@ -151,13 +154,13 @@ button.danger {
   background-color: rgba(255,255,255,var(--tw-bg-opacity));
 }
 .uvsity__card__border__theme{
-  border-bottom: 5px solid #0081cb;
+  border-bottom: 5px solid var(--blue);
 }
 .uvsity__card__top {
   border: 1px solid lightgray;
   background-color: #fff;
   border-radius: 10px;
-  border-bottom: 5px solid #0081cb;
+  border-bottom: 5px solid var(--blue);
 }
 .spacer {
   padding: 5px;
@@ -172,7 +175,7 @@ button.danger {
   text-align: left;
   padding: 10px;
   border: 1px solid lightgray;
-  border-bottom: 5px solid #0081cb;
+  border-bottom: 5px solid var(--blue);
   background-color: #fff;
   border-radius: 10px;
   margin-top: 10px;
@@ -223,6 +226,9 @@ margin-top:14px!important ;
 .dialog-subtitle{
   border-bottom: 1px solid #e2e2e2!important;
 }
+.dialog-dark-subtitle{
+  border-bottom: 1px solid dimgrey!important;
+}
 .dark-dialog{
   background-color: #111 !important;
   color: #fff !important;
@@ -232,5 +238,6 @@ cursor: pointer!important;
 text-decoration: underline;
 transition-timing-function: ease-in;
 transition: all 0.8s;
-color: #0081cb;
+color: var(--blue);
+
 }
