--- a/styles/Stat.module.css
+++ b/styles/Stat.module.css
@@ -50,6 +50,7 @@
 .stat__legend:hover {
   text-decoration: underline;
   cursor: pointer;
+  color: #111;
   transition-timing-function: ease-in;
   transition: all 0.8s;
 }
